--- a/cluster/apps/network/external-dns/static-entries/nas-1-dns.yaml
+++ b/cluster/apps/network/external-dns/static-entries/nas-1-dns.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: network
 spec:
   endpoints:
-  - dnsName: nas-1.holthome.net
+  - dnsName: nas-1.${SECRET_DOMAIN}
     recordTTL: 180
     recordType: A
     targets:
