--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -4,55 +4,55 @@ type: Opaque
 metadata:
   name: cluster-secrets
   namespace: flux-system
-data:
-  SECRET_DOMAIN: ENC[AES256_GCM,data:6dKbbSHa/mY+3RfR,iv:6ihNYf9JzRco0bKADTdWfj3oPht3sF8Ejv/e7SnN9vI=,tag:CAbbGt7/7KVXwjYw7PwTXw==,type:str]
+stringData:
+  SECRET_DOMAIN: ENC[AES256_GCM,data:JuESgj5IM00l8tk9,iv:pwU5RKEFOrAuOTPF45NgyT/nkzjwsu3rVTe4i++0Rv0=,tag:lh9YLHPPinbGQSbwD7bjmQ==,type:str]
 sops:
   kms: []
   gcp_kms: []
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-06-01T18:03:53Z"
-  mac: ENC[AES256_GCM,data:XpJ+MC/iWrW7qpESuPcQRRTkWcT8lO3vDryZSiql2ryTc/oC5ZWgJ4PmGKvRxSuMF/fGbEdrCIi7s12IRxCI4v7k0XGomloFg6lS4TirJbKxwpD/PmhE6BDTj1dgwO+uHsrisIvyg9njHjdNQdLHnsfBXKJw8ICbAMZcwkNpxQU=,iv:hTd4PQFUxFXDNQr0t7BW3PzJH6DM2Yf5Y4AocXrCgEA=,tag:zCCgx/QAl+jqBuXe6CfmNQ==,type:str]
+  lastmodified: "2021-06-01T18:13:26Z"
+  mac: ENC[AES256_GCM,data:pFkz8osbeMoffduswJDG2ERhAS4DBpywFd+dzgtP1OEs2fAtB/ipav22AszFoig+asGng+CL/RAwb5aiuVztiFg9iIjdXXbn2K2ZQv4s+b0RGDcL8abIkSme0TTNaTh/mKWs1jX6NEXlX18XYbnlW36n60dsXnRxgglNlPZQ0Rk=,iv:AwBczIJ06L3g2DdQoJ3pU2U8r3dBbqS9qz7bF8e6DXs=,tag:IUMwqi0awa34RtUBHRYAHw==,type:str]
   pgp:
-    - created_at: "2021-06-01T18:03:52Z"
+    - created_at: "2021-06-01T18:13:26Z"
       enc: |
         -----BEGIN PGP MESSAGE-----
 
-        hQIMA8oSIqtHvng8ARAAmq57UB3JrTyJ9XUTufQzRCVN72bJRAEJRI9wKZIgre90
-        6CEoP/fQpS7P0T+7lWLYkrLMcLupTiBCcVWnOhBgA8vdHSyjalmsWC5pmArKpbAA
-        ioo8aC9bdfyQfV1pe2El+v4ffLFc62gx2KPySrbXuVBybccUxr3qqEUfv8WCc2/r
-        cNCNZcNh1X5/plCiAjFRSJmnK0wB3Gu/riC9TD/BClIJfQ+7eSmdbVaaufN9/zxH
-        3CwEC9gnffTAHcpOq1yg8y73r6yhmUqHW8OQDZRC4NbPACM02CH6M9WIIZrPI1jv
-        YmUA8hsR1IjD9fCoDlOpZ6atcNnfxirNm9mbqTQ8Y8TxZgSfV5DUmOKOTKtCRyUK
-        2BxFpC3NFkSP2PRWvc1sUkJcrZogNq6xg1Jx/yYhW+b6ywVE0rymnIIJeD2NbR9L
-        33UR5mBoWnp1cluYt/heDC77f8OqZSUMz0SrVR34d58iYR66X6hi8TRu1SVw8pnx
-        mKcnrBTIG/ZaiC4Qp8df+CHsROADaiIL/hrNRZ9kOonvqHYpZEgNNdawQMCckuc/
-        7p97WOBQdH7O7y6XLzZn5JDyCVC2mSR8ESL7zvjUZItmf+x/NYfKRdqwo7b7uvS/
-        ZAKC3SfL3HZO2mk65BuFWMaH8rUdYaRQ1xVN2a5U0LW6f8fgmcTm5h5wt58x82TS
-        XgEH2o4R/I0WmGwvdiF4e4afZOUMyZ+ULAJ+62ZTDGVvzb/jTxr8gbKcvQAiZvKc
-        WuDD1p1LU3LfpkbI+DJSoF7S+7GnWvJ5zc1TqAyGAxSoRvdRTG2TcJtlD5JA29A=
-        =phOw
+        hQIMA8oSIqtHvng8AQ/8DBBzWgGFgmXxZv+k0Jcx2pkNtN1gO+Wf0Gk9RY/ryqqW
+        szPFHwicAyfq/fMhnmRDd5+JIR0Gt52+mWwlgvlXEkHkOiDvn4bbjVLmeGzDvTXk
+        cZleeLTPIXrnv8X5JdqHWb0ikpq5vFtr6Fpfvt6Lno1H+E9gBhzRuNIzgNf3G4HB
+        cjEZzNricQmf/K93RfEBZhkdjSbo5oPawdXyLNpzMiBk1P1AjZBpVAeCVe7AIBzN
+        vK+qQoHh4CP8KOXiMTWn2G9TWQwDDcpU9RaG2gAm/8htat33vLVfkRuKFC9SKUJY
+        KM4AreEczSW9g2tZEKgUr0Bh1lM2HjAep/TmlKInR3+LBV6PSNrQO9L5DV6arcJx
+        Mw8pYnYj3tDMoRmPfHv1Mjy5wIJJ1IEsjFM1k1zmWdoWB10BE/guWkDQkwxh4CNL
+        C2m8Q5CksqlIzyi78vYxPYgkSVnDNZX5vm3b2EjRd67Jw1B5Br6hDmbfoNimSbDB
+        PwTDWncKtONSyrolTbSxAXHAd8TY11QMxxmjq0+ydrWaU4DSnv1T/2XpOYWopTqB
+        14uye7CnLMzOrtDX2bQHM7oGo6AWDniqBdAlyjTZi8lVPYl2/RPlrJ/kIOVFQCWJ
+        uMJR86B+ukuAaDTuK9R/j+DWPYfF6zw2njrP51yR00ilJSZxNgJYDr1c8jCkjnzS
+        XgF3+H65HCVrLoOYbo6cd2VJZZhSx4Y1bQ2RKzRI8OV01YKfYOfttEpEJDp56Ajr
+        7XFPalyxZCmG9Kq3Urtosb7yvgNoBVqM3Cij64O6zdh/RDkR6rPmEGtYK+pBZ5Y=
+        =Rdyv
         -----END PGP MESSAGE-----
       fp: DA8002060402EC39B195451D5CED80362B5A4EF2
-    - created_at: "2021-06-01T18:03:52Z"
+    - created_at: "2021-06-01T18:13:26Z"
       enc: |
         -----BEGIN PGP MESSAGE-----
 
-        hQIMA8ORz3KkY6O4AQ/+Nu62XZ0PSqDJRxkeZ1diG1oViZRQHJOnwwCoTL8fB7J1
-        5oz1elk6qtN2cwh5Dw3ABx2RIi5D/U7I+N3fTxpJ7wcqUGca00UV3LKwtYOkQBMt
-        D5KjcVCr/9cX8C9bDAyR23gMsIvqHseqlR8a2ylBMLXWhy4wG5nOyjzQnOM/6nrj
-        Ci6oT5NpNDsmsaBuYizcTCTBylVu/44X18nxo0UDabgemx4E1b1xGtj425G91EaO
-        KkdvI0Vd2nGN+EZDHZ+O8qY701KGSGyfRUcbpi9Yw4DpxxvfaU/1lrhb+dcvJ3r8
-        O200JpQLa6B2Sk3GEn4mxW0N4RgoocMnN9UalTgI3lAuEkQhVaSitQebWGGJofbE
-        FxoK9rP1FAr+cfQF9j2BqWCLAMQnCQzLW+Yz9VZ9FIAdZX7mdeYegX/xA/+gDCq/
-        saKuu47d0HvFkyInk3QrQOnqfWfOtyJ/86gY+AW1cPIrQ0AHH4L6x1aObZgztS9P
-        hof8gUvIFkZe0NPUp6lEAAwCE354xNLmzm3OczGudgrZnUQFSmA/0C+jTlHVyoad
-        /2TMWYa0uUWLJd2ORpf4cfEdwyQsBJh+beEPynpPAyTMMt/EWBxN9CkSahVa3sbq
-        OXl1I0fGwZel+LW3LSkjZ3wuiFTktZLsf3kSwB29q/C7SqgGJpU7P9XwS+lTG/TS
-        XgHslL4cLTe9nrRC9/UfnJ8meNm6IBaZJQCP1iwzBeovEEgivzXby9mJRfPhWDUl
-        dzEpz6An3AlltVhEsOZcRSqHyc+MfkLOk00K6/naTZdiUw6J8sJ61dsEssnsb2A=
-        =sxfu
+        hQIMA8ORz3KkY6O4AQ//S9DlizMCJptYQCrzFCLRm9Ohr6fHLQA7NzLTWToM3Sff
+        tBwfmhOzYOMxts5SrghMrWuXVpQWme1NqbX70UM/c+gTGdkEgYByW1j/rifE4QK/
+        gdc1OOjZChE40S/F88BnWkVojKbk9m9kS5/z+eBLODs0TC8Wa3lw+NjzanLWw0wc
+        0mQ5Nc/DmpfK0W7cEmNVzvKbZ200vwSbmGIy5ncXg8M8xsSUrZJ+EJvCx1LyYdvW
+        3zJ0Ugagsz6YqiudnnRlAq7MI0Kf0lTK1mgusUzFW5y4oSD/s3A0RtyJgMdM007a
+        ozIy35kJ8KmUVmNSmwFuabQjaHE9rJxpOE8Xp9Nx71ehS6v9/Ya//Uqtz9j8GVGi
+        w+OhQoMH91TxA+d0gLEvZsUNyovVQ61Kl3WKQROJypG0xQkWLIO2/ref5hAcL/yW
+        WEGWnMbodO4ig8Rw2yo50JCRdtHIOtPUP0WVVr0ukwKeayselvvkzyy5ctLsb60d
+        gqZubD+Fi3ztx09OXfu+dntNsQHcVY3VjMpHVqciVUcFCF68+Xgn2oblluapjEAn
+        MiSQo5dMUIIkc38blCa6WrEOZqnqYm8FKx3K5nDFWrhBhn3GC4H1g0x9jHf8GVv/
+        Wvzl1Z1DnKz16juhlgD+7FbyXar5ayJsN82E9XQE8WpaZ2pXFGGicr3gVS1wg4LS
+        XgGsg2rqnpjfeFqha09FYDxxmJMeZGlnJVrKoSLv2sIV2VqxZfdpgaX26WT2k4fT
+        mbk6T5FG7+aJs8TPpRCV1NYOIabVpQkd62C80CWazp4Vc3QXtDvT02iTvR/FbX0=
+        =LVAG
         -----END PGP MESSAGE-----
       fp: 76DAFEBE0E21604BB9F2D6C11850C928A0D756C8
   encrypted_regex: ^(data|stringData)$
