--- a/cluster/apps/default/_pvc/nfs-home-ryan.yaml
+++ b/cluster/apps/default/_pvc/nfs-home-ryan.yaml
@@ -13,7 +13,7 @@ spec:
     name: nfs-home-ryan-pvc
   storageClassName: nfs
   nfs:
-    server: nas.holthome.net
+    server: nas.${SECRET_DOMAIN}
     path: "/mnt/tank/home/ryan"
 ---
 apiVersion: v1
