--- a/cluster/apps/default/_pvc/nfs-tank-share.yaml
+++ b/cluster/apps/default/_pvc/nfs-tank-share.yaml
@@ -13,7 +13,7 @@ spec:
     name: nfs-tank-share-pvc
   storageClassName: nfs
   nfs:
-    server: nas.holthome.net
+    server: nas.${SECRET_DOMAIN}
     path: "/mnt/tank/share"
 ---
 apiVersion: v1
