--- a/cluster/apps/default/matrix/helm-release.yaml
+++ b/cluster/apps/default/matrix/helm-release.yaml
@@ -71,7 +71,7 @@
 #       relay:
 #         enabled: false
 #       external:
-#         host: smtp.holthome.net
+#         host: smtp.${SECRET_DOMAIN}
 #         port: 25
 #     # bridges:
 #     #   discord:
