--- a/cluster/apps/home/zigbee2mqtt/helm-release.yaml
+++ b/cluster/apps/home/zigbee2mqtt/helm-release.yaml
@@ -34,15 +34,15 @@ spec:
         kubernetes.io/ingress.class: "nginx"
         kubernetes.io/tls-acme: "true"
         cert-manager.io/cluster-issuer: letsencrypt-production
-        nginx.ingress.kubernetes.io/auth-url: "https://auth.holthome.net/oauth2/auth"
-        nginx.ingress.kubernetes.io/auth-signin: https://auth.holthome.net/oauth2/start
+        nginx.ingress.kubernetes.io/auth-url: "https://auth.${SECRET_DOMAIN}/oauth2/auth"
+        nginx.ingress.kubernetes.io/auth-signin: https://auth.${SECRET_DOMAIN}/oauth2/start
       hosts:
-      - host: zigbee.holthome.net
+      - host: zigbee.${SECRET_DOMAIN}
         paths:
         - path: /
       tls:
       - hosts:
-        - zigbee.holthome.net
+        - zigbee.${SECRET_DOMAIN}
         secretName: zigbee-cert
     config:
       mqtt:
