--- a/cluster/apps/media/bazarr/helm-release.yaml
+++ b/cluster/apps/media/bazarr/helm-release.yaml
@@ -29,13 +29,13 @@ spec:
         external-dns.alpha.kubernetes.io/target: 10.20.0.2
         kubernetes.io/ingress.class: "nginx"
       hosts:
-      - host: bazarr.holthome.net
+      - host: bazarr.${SECRET_DOMAIN}
         paths:
         - path: /
           pathType: Prefix
       tls:
       - hosts:
-        - "bazarr.holthome.net"
+        - "bazarr.${SECRET_DOMAIN}"
     persistence:
       config:
         enabled: true
