--- a/cluster/apps/media/gaps/helm-release.yaml
+++ b/cluster/apps/media/gaps/helm-release.yaml
@@ -28,13 +28,13 @@ spec:
       annotations:
         kubernetes.io/ingress.class: "nginx"
       hosts:
-      - host: gaps.holthome.net
+      - host: gaps.${SECRET_DOMAIN}
         paths:
         - path: /
           pathType: Prefix
       tls:
       - hosts:
-        - "gaps.holthome.net"
+        - "gaps.${SECRET_DOMAIN}"
         secretName: gaps-cert
     persistence:
       data:
