--- a/cluster/apps/media/jackett/helm-release.yaml
+++ b/cluster/apps/media/jackett/helm-release.yaml
@@ -31,13 +31,13 @@ spec:
         external-dns.alpha.kubernetes.io/target: 10.20.0.2
         kubernetes.io/ingress.class: "nginx"
       hosts:
-      - host: jackett.holthome.net
+      - host: jackett.${SECRET_DOMAIN}
         paths:
         - path: /
           pathType: Prefix
       tls:
       - hosts:
-        - "jackett.holthome.net"
+        - "jackett.${SECRET_DOMAIN}"
         secretName: jackett-cert
     persistence:
       config:
