--- a/cluster/apps/media/nzbhydra/helm-release.yaml
+++ b/cluster/apps/media/nzbhydra/helm-release.yaml
@@ -34,13 +34,13 @@ spec:
         kubernetes.io/tls-acme: "true"
         cert-manager.io/cluster-issuer: letsencrypt-production
       hosts:
-      - host: nzbhydra.holthome.net
+      - host: nzbhydra.${SECRET_DOMAIN}
         paths:
         - path: /
           pathType: Prefix
       tls:
       - hosts:
-        - nzbhydra.holthome.net
+        - nzbhydra.${SECRET_DOMAIN}
         secretName: nzbhydra-cert
     persistence:
       config:
