--- a/cluster/apps/media/plex/helm-release.yaml
+++ b/cluster/apps/media/plex/helm-release.yaml
@@ -41,13 +41,13 @@ spec:
       annotations:
         kubernetes.io/ingress.class: "nginx"
       hosts:
-      - host: plex.holthome.net
+      - host: plex.${SECRET_DOMAIN}
         paths:
         - path: /
           pathType: Prefix
       tls:
       - hosts:
-        - "plex.holthome.net"
+        - "plex.${SECRET_DOMAIN}"
     persistence:
       config:
         enabled: true
