--- a/cluster/apps/media/radarr/helm-release.yaml
+++ b/cluster/apps/media/radarr/helm-release.yaml
@@ -29,16 +29,16 @@ spec:
         kubernetes.io/ingress.class: "nginx"
         kubernetes.io/tls-acme: "true"
         cert-manager.io/cluster-issuer: letsencrypt-production
-        # nginx.ingress.kubernetes.io/auth-url: "https://auth.holthome.net/oauth2/auth"
-        # nginx.ingress.kubernetes.io/auth-signin: "https://auth.holthome.net/oauth2/start"
+        # nginx.ingress.kubernetes.io/auth-url: "https://auth.${SECRET_DOMAIN}/oauth2/auth"
+        # nginx.ingress.kubernetes.io/auth-signin: "https://auth.${SECRET_DOMAIN}/oauth2/start"
       hosts:
-      - host: radarr.holthome.net
+      - host: radarr.${SECRET_DOMAIN}
         paths:
         - path: /
           pathType: Prefix
       tls:
       - hosts:
-        - radarr.holthome.net
+        - radarr.${SECRET_DOMAIN}
         secretName: radarr-cert
       additionalIngresses:
       - enabled: true
@@ -48,13 +48,13 @@ spec:
           kubernetes.io/tls-acme: "true"
           cert-manager.io/cluster-issuer: letsencrypt-production
         hosts:
-        - host: radarr.holthome.net
+        - host: radarr.${SECRET_DOMAIN}
           paths:
           - path: /api
             pathType: Prefix
         tls:
         - hosts:
-          - radarr.holthome.net
+          - radarr.${SECRET_DOMAIN}
           secretName: radarr-cert
     persistence:
       config:
