--- a/cluster/apps/media/sabnzbd/helm-release.yaml
+++ b/cluster/apps/media/sabnzbd/helm-release.yaml
@@ -30,16 +30,16 @@ spec:
         kubernetes.io/ingress.class: "nginx"
         kubernetes.io/tls-acme: "true"
         cert-manager.io/cluster-issuer: letsencrypt-production
-        nginx.ingress.kubernetes.io/auth-url: "https://auth.holthome.net/oauth2/auth"
-        nginx.ingress.kubernetes.io/auth-signin: "https://auth.holthome.net/oauth2/start"
+        nginx.ingress.kubernetes.io/auth-url: "https://auth.${SECRET_DOMAIN}/oauth2/auth"
+        nginx.ingress.kubernetes.io/auth-signin: "https://auth.${SECRET_DOMAIN}/oauth2/start"
       hosts:
-      - host: sabnzbd.holthome.net
+      - host: sabnzbd.${SECRET_DOMAIN}
         paths:
         - path: /
           pathType: Prefix
       tls:
       - hosts:
-        - sabnzbd.holthome.net
+        - sabnzbd.${SECRET_DOMAIN}
         secretName: sabnzbd-cert
       additionalIngresses:
       - enabled: true
@@ -47,13 +47,13 @@ spec:
         annotations:
           kubernetes.io/ingress.class: "nginx"
         hosts:
-        - host: sabnzbd.holthome.net
+        - host: sabnzbd.${SECRET_DOMAIN}
           paths:
           - path: /api
             pathType: Prefix
         tls:
         - hosts:
-          - "sabnzbd.holthome.net"
+          - "sabnzbd.${SECRET_DOMAIN}"
           secretName: sabnzbd-cert
     persistence:
       config:
