--- a/cluster/apps/monitoring/grafana/helm-release.yaml
+++ b/cluster/apps/monitoring/grafana/helm-release.yaml
@@ -25,7 +25,7 @@ spec:
       GF_LOG_FILTERS: rendering:debug
     grafana.ini:
       server:
-        root_url: "https://grafana.holthome.net"
+        root_url: "https://grafana.${SECRET_DOMAIN}"
       paths:
         data: /var/lib/grafana/data
         logs: /var/log/grafana
@@ -144,10 +144,10 @@ spec:
       annotations:
         kubernetes.io/ingress.class: "nginx"
       hosts:
-      - "grafana.holthome.net"
+      - "grafana.${SECRET_DOMAIN}"
       tls:
       - hosts:
-        - "grafana.holthome.net"
+        - "grafana.${SECRET_DOMAIN}"
     persistence:
       enabled: true
       existingClaim: grafana-pvc
