--- a/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -56,13 +56,13 @@ spec:
         annotations:
           kubernetes.io/tls-acme: "true"
           cert-manager.io/cluster-issuer: letsencrypt-production
-          nginx.ingress.kubernetes.io/auth-url: "https://auth.holthome.net/oauth2/auth"
-          nginx.ingress.kubernetes.io/auth-signin: "https://auth.holthome.net/oauth2/start?rd=$escaped_request_uri"
+          nginx.ingress.kubernetes.io/auth-url: "https://auth.${SECRET_DOMAIN}/oauth2/auth"
+          nginx.ingress.kubernetes.io/auth-signin: "https://auth.${SECRET_DOMAIN}/oauth2/start?rd=$escaped_request_uri"
         hosts:
-        - prom-alert.holthome.net
+        - prom-alert.${SECRET_DOMAIN}
         tls:
         - hosts:
-          - prom-alert.holthome.net
+          - prom-alert.${SECRET_DOMAIN}
           secretName: alertmanager-cert
       config:
         global:
@@ -142,13 +142,13 @@ spec:
         annotations:
           kubernetes.io/tls-acme: "true"
           cert-manager.io/cluster-issuer: letsencrypt-production
-          nginx.ingress.kubernetes.io/auth-url: "https://auth.holthome.net/oauth2/auth"
-          nginx.ingress.kubernetes.io/auth-signin: "https://auth.holthome.net/oauth2/start?rd=$escaped_request_uri"
+          nginx.ingress.kubernetes.io/auth-url: "https://auth.${SECRET_DOMAIN}/oauth2/auth"
+          nginx.ingress.kubernetes.io/auth-signin: "https://auth.${SECRET_DOMAIN}/oauth2/start?rd=$escaped_request_uri"
         hosts:
-        - prom-server.holthome.net
+        - prom-server.${SECRET_DOMAIN}
         tls:
         - hosts:
-          - prom-server.holthome.net
+          - prom-server.${SECRET_DOMAIN}
           secretName: prom-cert
       prometheusSpec:
         # image:
