--- a/cluster/apps/network/adguard/helm-release.yaml
+++ b/cluster/apps/network/adguard/helm-release.yaml
@@ -86,13 +86,13 @@ spec:
         # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
       hosts:
       # - host: "dns01.network.${SECRET_DOMAIN}"
-      - host: adguard.holthome.net
+      - host: adguard.${SECRET_DOMAIN}
         paths:
         - path: /
           pathType: Prefix
       tls:
       - hosts:
-        - adguard.holthome.net
+        - adguard.${SECRET_DOMAIN}
         # - "dns01.network.${SECRET_DOMAIN}"
     resources:
       requests:
