--- a/cluster/apps/network/coredns/helm-release.yaml
+++ b/cluster/apps/network/coredns/helm-release.yaml
@@ -30,7 +30,7 @@ spec:
       clusterIP: "${SVC_COREDNS_ADDRESS_INTERNAL}"
     servers:
     - zones:
-      - zone: holthome.net.
+      - zone: ${SECRET_DOMAIN}.
         scheme: dns://
         # use_tcp: true
       - zone: ryanholt.net.
@@ -58,11 +58,11 @@ spec:
       - name: reload
       - name: loadbalance
       - name: etcd
-        parameters: holthome.net ryanholt.net
+        parameters: ${SECRET_DOMAIN} ryanholt.net
         configBlock: |-
           stubzones
           path /skydns
-          endpoint https://k8s.holthome.net:2379
+          endpoint https://k8s.${SECRET_DOMAIN}:2379
           tls /etc/coredns/coredns-etcd-secret/cert.pem /etc/coredns/coredns-etcd-secret/key.pem /etc/coredns/coredns-etcd-secret/ca.crt
     prometheus:
       service:
