--- a/cluster/apps/network/external-dns/static-entries/smtp-dns.yaml
+++ b/cluster/apps/network/external-dns/static-entries/smtp-dns.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: network
 spec:
   endpoints:
-  - dnsName: smtp.holthome.net
+  - dnsName: smtp.${SECRET_DOMAIN}
     recordTTL: 180
     recordType: A
     targets:
