--- a/cluster/apps/default/tautulli/helm-release.yaml
+++ b/cluster/apps/default/tautulli/helm-release.yaml
@@ -29,13 +29,13 @@ spec:
         external-dns.alpha.kubernetes.io/target: 10.20.0.2
         kubernetes.io/ingress.class: "nginx"
       hosts:
-      - host: tautulli.${SECRET_DOMAIN}
+      - host: "tautulli.${SECRET_DOMAIN}"
         paths:
         - path: /
           pathType: Prefix
       tls:
       - hosts:
-        - tautulli.${SECRET_DOMAIN}
+        - "tautulli.${SECRET_DOMAIN}"
     persistence:
       config:
         enabled: true
