--- a/cluster/apps/default/minio/helm-release.yaml
+++ b/cluster/apps/default/minio/helm-release.yaml
@@ -41,10 +41,10 @@ spec:
         kubernetes.io/ingress.allow-http: "false"
         cert-manager.io/cluster-issuer: letsencrypt-production
       hosts:
-      - minio.${SECRET_DOMAIN}
+      - "minio.${SECRET_DOMAIN}"
       tls:
       - hosts:
-        - minio.${SECRET_DOMAIN}
+        - "minio.${SECRET_DOMAIN}"
         secretName: minio-cert
     metrics:
       serviceMonitor:
